--- a/binderhub/config_test.yaml
+++ b/binderhub/config_test.yaml
@@ -52,6 +52,7 @@ initContainers:
       - clone
       - --single-branch
       - --branch=dev
+      - --depth=1
       - --
       - https://github.com/gesiscss/orc.git
       - /etc/binderhub/templates
