--- a/nfs_provisioner/deployment.yaml
+++ b/nfs_provisioner/deployment.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: nfs-provisioner
+---
 kind: Service
 apiVersion: v1
 metadata:
@@ -19,10 +24,13 @@ spec:
     app: nfs-provisioner
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   name: nfs-provisioner
 spec:
+  selector:
+    matchLabels:
+      app: nfs-provisioner
   replicas: 1
   strategy:
     type: Recreate
@@ -36,7 +44,7 @@ spec:
         worker1: production  # because of hostPath PVs
       containers:
         - name: nfs-provisioner
-          image: quay.io/kubernetes_incubator/nfs-provisioner:v1.0.9
+          image: quay.io/kubernetes_incubator/nfs-provisioner:v2.2.0-k8s1.12
           ports:
             - name: nfs
               containerPort: 2049
@@ -52,6 +60,7 @@ spec:
               add:
                 - DAC_READ_SEARCH
                 - SYS_RESOURCE
+          # TODO add - "-enable-xfs-quota=true"
           args:
             - "-provisioner=orc.external/nfs"
           env:
