--- a/nginx_shibboleth/nginx-shibboleth-app.yaml
+++ b/nginx_shibboleth/nginx-shibboleth-app.yaml
@@ -67,14 +67,8 @@ spec:
           readOnly: true
         - name: nginx-conf
           mountPath: /etc/nginx/conf.d
-        - name: letsencrypt-manual
-          mountPath: "/etc/nginx/letsencrypt-manual"
-          readOnly: true
-        - name: letsencrypt
-          mountPath: "/etc/letsencrypt"
-          readOnly: true
-        - name: letsencrypt-dhparam
-          mountPath: "/etc/letsencrypt_dhparam"
+        - name: letsencrypt-volume
+          mountPath: "/etc/letsencrypt_volume"
           readOnly: true
       volumes:
       - name: shibboleth-sp-conf
@@ -86,12 +80,6 @@ spec:
       - name: nginx-conf
         configMap:
           name: nginx-configmap
-      - name: letsencrypt-manual
-        secret:
-          secretName: letsencrypt-manual-secret
-      - name: letsencrypt
-        secret:
-          secretName: letsencrypt-secret
-      - name: letsencrypt-dhparam
-        secret:
-          secretName: letsencrypt-dhparam-secret
+      - name: letsencrypt-volume
+        hostPath:
+          path: /etc/letsencrypt
