--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -54,8 +54,8 @@ server {
 
     server_name notebooks.gesis.org 194.95.75.9;
 
-    ssl_certificate /etc/letsencrypt/tls.crt;
-    ssl_certificate_key /etc/letsencrypt/tls.key;
+    ssl_certificate /etc/letsencrypt_volume/live/notebooks.gesis.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt_volume/live/notebooks.gesis.org/privkey.pem;
     # https://www.nginx.com/resources/admin-guide/nginx-ssl-termination/#optimize
     # include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_session_cache shared:le_nginx_SSL:50m;  # 50mb shared session cache
@@ -63,7 +63,7 @@ server {
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_ciphers "ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS";
-    ssl_dhparam /etc/letsencrypt_dhparam/dhparam.pem;
+    ssl_dhparam /etc/letsencrypt_volume/dhparam.pem;
 
     # optimization
     access_log off;  # turn off access log
@@ -73,12 +73,6 @@ server {
     proxy_buffer_size 32k;
 
     location = /favicon.ico { access_log off; log_not_found off; }
-
-    # serve this file to be able to generate and renew ssl certs of production on  k8s master
-    location /.well-known/acme-challenge/v0kk3JKwkqQSB_uueBZJHXrtig3b1ImeQOxDtkt5yVc {
-        alias /etc/nginx/letsencrypt-manual;
-        index letsencrypt_manual.txt;
-    }
 
     # Managing literal requests to orc site app
     location / {
