--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ build_job:
       fi;
   only:
 #    - master
-    - dev
+    - staging
   tags:
     - orc
   when: on_success
@@ -102,7 +102,7 @@ deploy_staging:
       echo "####### mode: $mode"
       fab -H $K8S_MASTER_NODE_IP deploy -p $K8S_MASTER_NODE_PASSWORD -r $CI_COMMIT_SHA -m $mode -s
   only:
-    - dev
+    - staging
   tags:
     - orc
   when: on_success
