--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ build_job:
         docker build -t gesiscss/nginx-shibboleth-orc:$CI_COMMIT_SHA_8 nginx_shibboleth/docker/.
         docker push gesiscss/nginx-shibboleth-orc:$CI_COMMIT_SHA_8
       fi;
-      if git diff HEAD~ --name-only | egrep 'orc_site/Dockerfile|orc_site/__init__.py|orc_site/app.py|orc_site/requirements.txt|orc_site/templates/|orc_site/static/'; then
+      if git diff HEAD~ --name-only | egrep 'orc_site/Dockerfile|orc_site/__init__.py|orc_site/app.py|orc_site/popular_repos.py|orc_site/requirements.txt|orc_site/templates/|orc_site/static/'; then
         echo "####### gesiscss/orc-site:$CI_COMMIT_SHA_8"
         docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
         docker build -t gesiscss/orc-site:$CI_COMMIT_SHA_8 orc_site/.
