--- a/nginx_shibboleth/nginx-shibboleth-app.yaml
+++ b/nginx_shibboleth/nginx-shibboleth-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-shibboleth-service
+  name: nginx-shibboleth
   labels:
     app: nginx-shibboleth
 spec:
@@ -23,7 +23,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-shibboleth-deployment
+  name: nginx-shibboleth
   labels:
     app: nginx-shibboleth
 spec:
@@ -35,7 +35,7 @@ spec:
     type: RollingUpdate  # default
   template:
     metadata:
-      name: nginx-shibboleth-pod
+      name: nginx-shibboleth
       labels:
         app: nginx-shibboleth
     spec:
