--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ jupyterhub/secret_local.yaml
 nginx_shibboleth/shibboleth/conf/ignore
 #monitoring/grafana_secret.yaml
 venv
+nginx_shibboleth/shibboleth/conf/shibboleth3
